# hermes_dingtalk

./: .gitignore  CLAUDE.md  LICENSE  README.md  dingtalk.py  pyproject.toml  requirements.txt
.omc/sessions/: 9dfaf909-2e0d-4c44-85df-451b2bb0c995.json  bf1023e0-346f-4e82-bef2-8f74bab9a390.json
.omc/state/: idle-notif-cooldown.json  last-tool-error.json
src/hermes_dingtalk/: __init__.py  adapter.py
src/hermes_dingtalk/stubs/: __init__.py  base.py  config.py  helpers.py  session.py
