[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-dingtalk"
version = "0.2.0"
description = "Hermes Agent DingTalk platform adapter — Stream Mode support"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Shine2099", email = "shine2099@example.com"}
]
keywords = ["hermes-agent", "dingtalk", "chatbot", "stream-mode"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.10"
dependencies = [
    "dingtalk-stream>=0.23.0,<1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.urls]
Homepage = "https://github.com/Shine2099/hermes-dingtalk"
Repository = "https://github.com/Shine2099/hermes-dingtalk"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
